<!--
  ~ WeatherLog is an app for logging air temperature changes and calculating
  ~ total time of preset limits exceeding in the nearest past. The project
  ~ began as a way to help moto-bikers decide if it is safe to drive in the morning
  ~ after cold night, or for automobile owners to decide if it is time to change tires
  ~ to/from winter ones. It also may be useful when man thinks about clothes/shoes
  ~ to dress in this time, or in all other cases when there needs to analyze
  ~ temperature's behaviour.
  ~
  ~ Copyright © 2015 Sergey Tuzlukov <s.tuzlukov@ya.ru>.
  ~
  ~
  ~ This file is part of WeatherLog.
  ~
  ~ WeatherLog is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ WeatherLog is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with WeatherLog.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="ru.moscow.tuzlukov.sergey.weatherlog.AboutActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/logo"
                android:layout_gravity="center"/>

            <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_vertical_margin"
                android:text="@string/description_text"/>
            <TextView
                android:id="@+id/tvAboutWeatherProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_vertical_margin"
                android:text="@string/about_weather_provider_text"/>
            <TextView
                android:id="@+id/tvAboutLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_vertical_margin"
                android:text="@string/about_license_text"/>
            <TextView
                android:id="@+id/tvAboutSources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_vertical_margin"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/about_getting_sources_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_vertical_margin"
                android:layout_marginBottom="@dimen/text_vertical_margin"
                android:src="@drawable/gplv3_logo"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tvCopyrghtInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_vertical_margin"
                android:gravity="center"
                android:textColor="@color/copyright_info_text_color"
                android:textColorLink="@color/copyright_info_link_color"
                android:text="@string/copyright_info_text"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
