<!--
  ~ WeatherLog is an app for logging air temperature changes and calculating
  ~ total time of preset limits exceeding in the nearest past. The project
  ~ began as a way to help moto-bikers decide if it is safe to drive in the morning
  ~ after cold night, or for automobile owners to decide if it is time to change tires
  ~ to/from winter ones. It also may be useful when man thinks about clothes/shoes
  ~ to dress in this time, or in all other cases when there needs to analyze
  ~ temperature's behaviour.
  ~
  ~ Copyright © 2015 Sergey Tuzlukov <s.tuzlukov@ya.ru>.
  ~
  ~
  ~ This file is part of WeatherLog.
  ~
  ~ WeatherLog is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ WeatherLog is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with WeatherLog.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context="ru.moscow.tuzlukov.sergey.weatherlog.SettingsActivity">

    <LinearLayout
        android:id="@+id/llLoader"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/loader_background_color">
        <ProgressBar
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tvRegisterAppId"
            android:text="@string/register_appid_label"
            android:clickable="true"
            android:singleLine="true"
            android:background="@drawable/bg_find_button"
            android:padding="@dimen/button_inner_vertical_margin"
            android:textColor="?android:attr/textColorLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View android:layout_width="match_parent" android:layout_height="2dp"
              android:layout_marginTop="@dimen/text_vertical_margin"
              android:layout_marginBottom="@dimen/text_vertical_margin"
              android:background="@color/horizontal_separator_line_color"/>

        <TextView
            android:id="@+id/tvSelectedCityInfo"
            android:text="@string/current_city_selected_label"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View android:layout_width="match_parent" android:layout_height="2dp"
              android:layout_marginTop="@dimen/text_vertical_margin"
              android:layout_marginBottom="@dimen/text_vertical_margin"
              android:background="@color/horizontal_separator_line_color"/>

        <TextView
            android:text="@string/find_city_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etCityName"
                android:hint="@string/find_city_hint"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:imeOptions="actionSearch"/>
            <ImageButton
                android:id="@+id/ibSearch"
                android:src="@android:drawable/ic_search_category_default"
                android:background="@drawable/bg_find_button"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
        </LinearLayout>

        <ListView
            android:id="@+id/lvVariants"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvErrorMessage"
            android:text="@string/no_city_found_error_message"
            android:visibility="gone"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
